[project]
name = "agentic_deep_researcher"
version = "0.1.0"
description = "Deep Research Agent using Crew AI and LinkUp API"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "crewai==0.134.0",
    "linkup-sdk>=0.2.4",
    "litellm>=1.0.0",
    "mcp>=1.6.0",
    "openai>=1.75.0",
    "python-dotenv>=1.1.0",
    "streamlit>=1.44.1",
    "streamlit-crewai-process-output>=0.1.1",
    "weasyprint>=53.3",
    "markdown-it-py",
    "pyperclip",
    "requests",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"